# Muhafiz--NetworkScanner

./: .env.example  .gitignore  main.py  pyproject.toml
.github/workflows/: ci.yml  publish_fingerprints.yml  sig_issue.yml
analysis/: __init__.py  engine.py  fingerprints.json  scorer.py  updater.py  upnp.py
api/: __init__.py  main.py  moderation.py  schema.sql  validator.py
community/: __init__.py  client.py  consent.py  history.py  sanitizer.py
core/: __init__.py  ghost.py  grabber.py  mac_lookup.py  models.py  nat_pmp.py  onvif.py  surveyor.py  verifier.py
db/: __init__.py  registry.py  resgistry.py  schema.sql
plugins/: __init__.py  base.py  example_plugin.py
presentation/: __init__.py  dashboard.py  reporter.py
presentation/mitigations/: asus.md  linksys.md  mikrotik.md  netgear.md  tplink.md
