[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "muhafiz"
version = "0.1.0"
description = "Hybrid Attack Surface Management for home and SOHO networks"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Mzt00" }]

dependencies = [
    # ── WAN scanning ──────────────────────────────────────
    "censys>=2.2.0",
    "requests>=2.31.0",

    # ── LAN scanning ──────────────────────────────────────
    "python-nmap>=0.7.1",
    "scapy>=2.5.0",

    # ── Environment ───────────────────────────────────────
    "python-dotenv>=1.0.0",

    # ── Dashboard ─────────────────────────────────────────
    "streamlit>=1.35.0",

    # ── API backend ───────────────────────────────────────
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",

    # ── PDF reporting ─────────────────────────────────────
    "reportlab>=4.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
muhafiz = "main:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing"